dashboard_startup_3.log
  File "/home/leo/Schreibtisch/project-genesis/skills/soul-evolution/tools/soul-viz.py", line 6895
    const loader = new GLTFLoader();
    ^^^^^^^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?
